[amazonechocontrol] change websocket protocol (#200)
* upgrade to A-F protocol
* improvements

Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>